docs/pages/versions/v57.0.0/sdk/ui/jetpack-compose/segmentedbutton.mdx
---
title: SegmentedButton
description: Jetpack Compose Segmented Button components for single or multi-choice selection.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Segmented buttons let app users choose from a small set of options displayed side by side in a row. They map to the official Jetpack Compose [Segmented Button](https://developer.android.com/develop/ui/compose/components/segmented-button) API.

There are two container types:

- **`SingleChoiceSegmentedButtonRow`**: only one button can be selected at a time (like radio buttons).
- **`MultiChoiceSegmentedButtonRow`**: multiple buttons can be toggled independently (like checkboxes).

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/segmentedbutton/android-light.webp"
  darkSrc="/static/images/expo-ui/segmentedbutton/android-dark.webp"
  alt="Single-choice segmented button row with Day, Week, and Month options"
/>

## Installation

<APIInstallSection />

## Usage

### Single-choice segmented button

Use `SingleChoiceSegmentedButtonRow` when only one option can be active at a time. Each `SegmentedButton` takes `selected` and `onClick` props.

<ComponentExample
  title="SingleChoiceExample.tsx"
  src="/static/images/expo-ui/examples/segmentedbutton-single-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/segmentedbutton-single-android-dark.webp"
  alt="A single-choice segmented row with Day, Week, Month, and Year, with Day selected">

```tsx
import { useState } from 'react';
import {
  Host,
  SingleChoiceSegmentedButtonRow,
  SegmentedButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function SingleChoiceExample() {
  const [selectedIndex, setSelectedIndex] = useState(0);
  const options = ['Day', 'Week', 'Month', 'Year'];

  return (
    <Host matchContents>
      <SingleChoiceSegmentedButtonRow>
        {options.map((label, index) => (
          <SegmentedButton
            key={label}
            selected={index === selectedIndex}
            onClick={() => setSelectedIndex(index)}>
            <SegmentedButton.Label>
              <Text>{label}</Text>
            </SegmentedButton.Label>
          </SegmentedButton>
        ))}
      </SingleChoiceSegmentedButtonRow>
    </Host>
  );
}
```

</ComponentExample>

### Multi-choice segmented button

Use `MultiChoiceSegmentedButtonRow` when multiple options can be toggled independently. Each `SegmentedButton` takes `checked` and `onCheckedChange` props.

<ComponentExample
  title="MultiChoiceExample.tsx"
  src="/static/images/expo-ui/examples/segmentedbutton-multi-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/segmentedbutton-multi-android-dark.webp"
  alt="A multi-choice segmented row with Wi-Fi and NFC checked, Bluetooth and GPS unchecked">

```tsx
import { useState } from 'react';
import {
  Host,
  MultiChoiceSegmentedButtonRow,
  SegmentedButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function MultiChoiceExample() {
  const [checkedItems, setCheckedItems] = useState([
    false,
    false,
    false,
    false,
  ]);
  const options = ['Wi-Fi', 'Bluetooth', 'NFC', 'GPS'];

  return (
    <Host
      matchContents={{ vertical: true }}
      style={{ width: '100%' }}>
      <MultiChoiceSegmentedButtonRow>
        {options.map((label, index) => (
          <SegmentedButton
            key={label}
            checked={checkedItems[index]}
            onCheckedChange={checked => {
              setCheckedItems(prev => {
                const next = [...prev];
                next[index] = checked;
                return next;
              });
            }}>
            <SegmentedButton.Label>
              <Text>{label}</Text>
            </SegmentedButton.Label>
          </SegmentedButton>
        ))}
      </MultiChoiceSegmentedButtonRow>
    </Host>
  );
}
```

</ComponentExample>

### Custom colors

Use the `colors` prop on `SegmentedButton` to customize its appearance across active, inactive, and disabled states.

<ComponentExample
  title="CustomColorsExample.tsx"
  src="/static/images/expo-ui/examples/segmentedbutton-colors-android-light.webp"
  darkSrc="/static/images/expo-ui/examples/segmentedbutton-colors-android-dark.webp"
  alt="A segmented row of price tiers with the selected segment filled purple">

```tsx
import { useState } from 'react';
import {
  Host,
  SingleChoiceSegmentedButtonRow,
  SegmentedButton,
  Text,
} from '@expo/ui/jetpack-compose';

export default function CustomColorsExample() {
  const [selectedIndex, setSelectedIndex] = useState(0);
  const options = ['$', '$$', '$$$', '$$$$'];

  return (
    <Host matchContents>
      <SingleChoiceSegmentedButtonRow>
        {options.map((label, index) => (
          <SegmentedButton
            key={label}
            selected={index === selectedIndex}
            onClick={() => setSelectedIndex(index)}
            colors={{
              activeContainerColor: '#6200EE',
              activeContentColor: '#FFFFFF',
            }}>
            <SegmentedButton.Label>
              <Text>{label}</Text>
            </SegmentedButton.Label>
          </SegmentedButton>
        ))}
      </SingleChoiceSegmentedButtonRow>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import {
  SingleChoiceSegmentedButtonRow,
  MultiChoiceSegmentedButtonRow,
  SegmentedButton,
} from '@expo/ui/jetpack-compose';
```

<APISection
  packageName="expo-ui/jetpack-compose/segmentedbutton"
  apiName="SegmentedButton"
/>
